--- a/Agustus 2022/html dasar/sesi 1.html
+++ b/Agustus 2022/html dasar/sesi 1.html
@@ -1,9 +1,16 @@
+Pendahuluan
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <body bgcolor="lightblue"></body>
     <title>Pemrograman web 1</title>
+    <style>
+        h1{
+            color: #f30d0d;
+        }
+    </style>
 </head>
 
 <body>
