--- a/Agustus 2022/html dasar/sesi 9.html
+++ b/Agustus 2022/html dasar/sesi 9.html
@@ -10,7 +10,7 @@
     <p><strong><h2>Klik foto tersebut untuk pengetahuan lebih lanjut</h2></strong></p>
     <hr>
 
-<a href="http://instagram.com/dentadwg_">
+<a href="http://instagram.com/all.abdl_">
     <img src="ganteng.jpg" style="display:block; margin:auto;" width="700"> 
     
 </a>
