--- a/Agustus 2022/css dasar/sesi 3.html
+++ b/Agustus 2022/css dasar/sesi 3.html
@@ -8,8 +8,8 @@ jadi kita bisa simpan css di halaman yang sama atau kita buat file sendiri yang 
 <style></style>
 -inline
 <p style="color: lightblue;"> ...</p>
--External
-<link real="stylesheet" href="style.css"></p>
+<p>-External
+<p link real="stylesheet" href="style.css"></p>
 <hr>
 
 
@@ -41,6 +41,8 @@ jadi kita bisa simpan css di halaman yang sama atau kita buat file sendiri yang 
 <html>
 <head>
     <title>Inline CSS</title>
+    <link rel="stylesheet" href="style penempatan.css">
+
 </head>
 <body>
 <h1 style="color : rgb(28, 164, 209);">Selamat Pagi</h1>  
