--- a/Agustus 2022/css dasar/sesi 1.html
+++ b/Agustus 2022/css dasar/sesi 1.html
@@ -1,15 +1,23 @@
-Pendahuluan CSS DASAR
+<p><h1>Pendahuluan CSS DASAR</h1></p>
+<body bgcolor="lightblue"></body>
+<hr>
 
-CSS adalah Mekanisme sederhana yang mengatur gaya/style pada halaman web
-CSS sendiri adalah singkatan dari cascading style Sheet
+<p>CSS adalah Mekanisme sederhana yang mengatur gaya/style pada halaman web
+CSS sendiri adalah singkatan dari cascading style Sheet</p>
+<hr>
 
-cascading style sheet merupakan aturan untuk mengatur beberapa komponen dalam sebuah web, sehingga
+<p>cascading style sheet merupakan aturan untuk mengatur beberapa komponen dalam sebuah web, sehingga
 akan lebih terstruktur dan seragam. CSS bukan merupakan bahasa pemrograman.
-CSS bekerja saat sebuah browser dinyalakan agar semua tidak apa.
+CSS bekerja saat sebuah browser dinyalakan agar semua tidak apa.</p>
+<hr>
 
+<ul>
 Cascading style sheet
--Aturan yang digunakan untuk menampilkan elemen/tag html.
--Dibuat terpisah dengan html.
--Bertujuan untuk memisahkan konten dan style.
--1 CSS dapat digunakan dibanyak halaman.
--1 halaman html dapat terlihat berbeda jika menggunakan css yang berbeda pula.
+<li>Aturan yang digunakan untuk menampilkan elemen/tag html.</li>
+<li>Dibuat terpisah dengan html.</li>
+<li>Bertujuan untuk memisahkan konten dan style.</li>
+<li>1 CSS dapat digunakan dibanyak halaman.</li>
+<li>1 halaman html dapat terlihat berbeda jika menggunakan css yang berbeda pula.</li>
+</ul>
+
+<hr><hr>
