--- a/Agustus 2022/css dasar/sesi 2.html
+++ b/Agustus 2022/css dasar/sesi 2.html
@@ -1,9 +1,9 @@
 Anatomi Css dasar
-
+<body bgcolor="lightblue"></body>
 seperti ini:
 selector {property: value;}
    h1    {color   : blue ;}
-
+   
 Selector:
 -Digunakan untuk memilih dan memanipulasi elemen spesifik pada html
 -Elemen html dipilih berdasarkan tag ID,CLASS bahkan pola/pattern
