--- a/Agustus 2022/css dasar/sesi 10.html
+++ b/Agustus 2022/css dasar/sesi 10.html
@@ -1,5 +1,6 @@
 <h1><p>Specificity</p></h1>
 <link rel="stylesheet" href="style specificity.css">
+<body bgcolor="lightblue"></body>
 
 <p id="p1">Definisinya adalah setiap deklarasi css (selector) memiliki berat yang berbeda.
 Berat tersebut menentukan seberapa spesifik sebuah elemen dapat dipilih oleh
@@ -7,7 +8,27 @@ Selector.
 Specificity atau “Kekhususan” pada CSS adalah aturan pemberian bobot nilai 
     pada elemen-elemen tertentu di CSS. Semakin tinggi nilainya maka 
     properti-properti CSS pada elemen tersebut yang dimunculkan.</p>
+
+<p>#P1 lebih spesifik daripada p</p>
     <hr>
+
+
+
+<ul id="sarapan">
+    <li class="favorit">Nasi Goreng</li>
+    <li>Mie Goreng</li>
+    <li>Ayam Goreng</li>
+    <li>Bubur ayam</li>
+    <li>Nasi Kuning</li>
+</ul>
+
+<p>agar warna nasi goreng itu menjadi merah, ini solusinya</p>
+<ul>
+    <li>Buat elemen yang diinginkan agar menjadi lebih spesifik</li>
+    <li>Tambahkan Beban pada elemen tersebut agar menjadi kuat</li>
+</ul>
+
+
 
     
 
