--- a/Agustus 2022/css dasar/sesi 1.html
+++ b/Agustus 2022/css dasar/sesi 1.html
@@ -9,15 +9,20 @@ CSS sendiri adalah singkatan dari cascading style Sheet</p>
 <p>cascading style sheet merupakan aturan untuk mengatur beberapa komponen dalam sebuah web, sehingga
 akan lebih terstruktur dan seragam. CSS bukan merupakan bahasa pemrograman.
 CSS bekerja saat sebuah browser dinyalakan agar semua tidak apa.</p>
+<p>CSS tidak dapat berdiri sendiri melainkan harus berada di dalam strukur pemrograman lain yang didasari oleh HTML atau PHP</p>
 <hr>
 
-<ul>
-Cascading style sheet
+<p>Cascading style sheet
 <li>Aturan yang digunakan untuk menampilkan elemen/tag html.</li>
 <li>Dibuat terpisah dengan html.</li>
 <li>Bertujuan untuk memisahkan konten dan style.</li>
 <li>1 CSS dapat digunakan dibanyak halaman.</li>
 <li>1 halaman html dapat terlihat berbeda jika menggunakan css yang berbeda pula.</li>
-</ul>
+</p>
+<hr>
 
+<p>Jenis-Jenis CSS:</p>
+<li>Internal CSS</li>
+<li>External CSS</li>
+<li>Inline CSS</li>
 <hr><hr>
