--- a/Agustus 2022/css dasar/sesi 2.html
+++ b/Agustus 2022/css dasar/sesi 2.html
@@ -1,15 +1,28 @@
-Anatomi Css dasar
+<p><h1>Anatomi Css dasar</h1></p>
 <body bgcolor="lightblue"></body>
 seperti ini:
-selector {property: value;}
-   h1    {color   : blue ;}
+<p>selector {property: value;}</p>
+<p>h1       {color   : blue ;}</p>
+
+<p>
+   <li>Selector adalah sebuah bagian bagian dari CSS yang digunakan untuk memilih dan memanipulasi elemen spesifik pada HTML.</li>
+   <li>Property adalah jenis style atau element yang akan di ubah dalam sebuah tag HTML.</li>
+   <li>Value adalah nilai dari Property.</li>
+   </p>
+   <hr>
+
    
-Selector:
--Digunakan untuk memilih dan memanipulasi elemen spesifik pada html
--Elemen html dipilih berdasarkan tag ID,CLASS bahkan pola/pattern
+<p><h2>Selector:</h2></p>
+<li>SELECTOR Digunakan untuk memilih dan memanipulasi elemen spesifik pada html</li>
+<li>Elemen html dipilih berdasarkan tag ID,CLASS bahkan pola/pattern</li>
 
+<p><h2>Property:</h2></p>
+<li>PROPERTY css dan nilainya itu berguna untuk memberikan efek khusus pada elemen html yang nantinya akan ditampilkan dihalaman web.
+    Anda bisa membuat tampilan dari halaman web lebih menarik dengan berbagai macam properti css.</li>
 
+<p><h2>Value:</h2></p>
+<li>VALUE CSS adalah nilai dari property. Misalkan untuk property background-color yang digunakan untuk mengubah warna latar belakang
+    dari sebuah selector, value atau nilainya dapat berupa red, blue, black, atau white.</li>
 
-
-
+</p>
 
