--- a/Agustus 2022/css dasar/sesi 3.html
+++ b/Agustus 2022/css dasar/sesi 3.html
@@ -1,6 +1,6 @@
-Penempatan css
+<p><h1>Penempatan css</h1></p>
 
-jadi kita bisa simpan css di halaman yang sama atau kita buat file sendiri yang terpisah dengan eksensi valen css nanti kita hubungkan antara file html dan css.
+Jadi kita bisa simpan css di halaman yang sama atau kita buat file sendiri yang terpisah dengan eksensi valen css nanti kita hubungkan antara file html dan css.
 
 <p>
     Penempatan css:
