--- a/Agustus 2022/css dasar/sesi 10.html
+++ b/Agustus 2022/css dasar/sesi 10.html
@@ -28,6 +28,8 @@ Specificity atau “Kekhususan” pada CSS adalah aturan pemberian bobot nilai
     <li>Tambahkan Beban pada elemen tersebut agar menjadi kuat</li>
 </ul>
 
+<p>TERIMA KASIH</p>
+
 
 
     
