--- a/Agustus 2022/css dasar/sesi 7.html
+++ b/Agustus 2022/css dasar/sesi 7.html
@@ -1,4 +1,4 @@
-CSS Selector basic
+<p><h1>CSS Selector basic</h1></p>
 
 <p>Digunakan pada css untuk mengenali sebuah elemen HTML yang akan diberi style</p>
 <hr>
