--- a/Agustus 2022/php dasar/sesi 6.html
+++ b/Agustus 2022/php dasar/sesi 6.html
@@ -1,13 +1,42 @@
 <h1><p>FUNCTION</p></h1>
 
-Fungsi (atau Function) di bahasa pemograman adalah kode program yang dirancang untuk menyelesaikan sebuah tugas tertentu,
+<p>Fungsi (atau Function) di bahasa pemograman adalah kode program yang dirancang untuk menyelesaikan sebuah tugas tertentu,
  dan merupakan bagian dari program utama. Kita dapat membuat fungsi sendiri, atau menggunakan fungsi yang dibuat oleh programmer lain.
-
- Function atau fungsi pada PHP mirip dengan bahasa pemrograman lainnya. Function adalah bagian dari kode yang mengambil satu input lagi
+</p>
+ <p>Function atau fungsi pada PHP mirip dengan bahasa pemrograman lainnya. Function adalah bagian dari kode yang mengambil satu input lagi
   dalam bentuk parameter dan melakukan beberapa pemrosesan dan mengembalikan nilai.
+</p>
+  
+ <p> Aturan-aturan dalam pembuatan function adalah :</p> 
+<p>1. Aturan penamaan function mirip dengan penamaan variable. Terdiri dari huruf, angka dan underscore ( _ ). Nama function hanya boleh dimulai dengan huruf atau dengan underscore.</p>
+<p>2. Parameter sifatnya tambahan</p>
 
-  
-  Aturan-aturan dalam pembuatan function adalah : 
-1. Aturan penamaan function mirip dengan penamaan variable. Terdiri dari huruf, angka dan underscore ( _ ). Nama function hanya boleh dimulai dengan huruf atau dengan underscore.
-2. Parameter sifatnya tambahan
-  
+
+<p>yang ada hubunganya dengan function</p>
+
+<h3><p>Date-time</p></h3>
+<li>time()</li>
+<li>date()</li>
+<li>mktime()</li>
+<li>strtotime()</li>
+
+<h3><p>String</p></h3>
+<li>strlen()</li>
+<li>strcmp()</li>
+<li>explode()</li>
+<li>htmlspecialchars()</li>
+
+<h3><p>Utility</p></h3>
+<li>var-dump()</li>
+<li>isset()</li>
+<li>empty(</li>
+<li>die()</li>
+<li>sleep()</li>
+
+
+
+<p>User-defined function yaitu fungsi yang kita buat sendiri.</p>
+
+
+
+
