--- a/Agustus 2022/php dasar/sesi 7.html
+++ b/Agustus 2022/php dasar/sesi 7.html
@@ -1,1 +1,9 @@
 <h1><p>Array</p></h1>
+
+<p>Array adalah variabel yang mempunyai indeks sehingga dapat menyimpan sejumlah data yang bertipe sama. Dimensi array adalah jumlah indeks pada variabel array. Array multi dimensi (lebih dari satu indeks, maksimal 7 indeks). 
+    Dalam perhitungan, array sering digunakan untuk operasi matriks.</p>
+
+    <p>Jenis Jenis Array</p>
+    Indexed arrays. Ini merupakan jenis array yang paling basic atau mendasar. ...
+Multidimensional arrays. ...
+3. Associative arrays.
