--- a/Agustus 2022/php dasar/sesi 5.html
+++ b/Agustus 2022/php dasar/sesi 5.html
@@ -1,6 +1,6 @@
 <h1><p>Struktur kendali</p></h1>
 
-Didalam Struktur Kendali KIta akan Mempelajari 2 hal yaitu: Pengulangan dan Pengkondisian.
+<p>Didalam Struktur Kendali KIta akan Mempelajari 2 hal yaitu: Pengulangan dan Pengkondisian.
 Pengulangan adalah ketika kita ingin mengerjakan sebuah blok program tanpa harus menulis ulang scriptnya.
 Dalam pengulangan ini ada beberapa sintaks yang harus dipahami:
 -for
@@ -16,5 +16,5 @@ Dan dalam pengkondisian ada beberapa sintaks yang harus kita pahami:
 
 -Struktur kendali merupakan bagian penting dalam suatu bahasa pemrograman karena bagian ini adalah bagian yang mengatur jalurnya eksekusi suatu program
 -Struktur kendali pada PHP terdiri dari dua pembahasan yaitu yang pertama adalah perulangan dan yang kedua adalah pengkondisian
-
+</p>
 
