--- a/Agustus 2022/php dasar/sesi 8.html
+++ b/Agustus 2022/php dasar/sesi 8.html
@@ -1,1 +1,3 @@
 <h1><p>Associative array</p></h1>
+
+Associative Array : Suatu array dengan index string dimana value nya tidak disimpan secara linear, melainkan dengan memberikan key tertentu.
