--- a/Agustus 2022/php dasar/sesi 10.html
+++ b/Agustus 2022/php dasar/sesi 10.html
@@ -1,1 +1,17 @@
 <h1><p>Database dan MySQL</p></h1>
+
+Mysql merupakan salah satu database open source yang paling populer digunakan oleh para developer website hingga seorang data scientist dan praktisi data. 
+Oleh karena itu Mysql terus melakukan pembaruan terupdate agar dapat memfasilitasi para developer.
+
+MySQL adalah sistem manajemen database relasional yang berbasis SQL (Structured Query Language). MySQL bisa digunakan untuk berbagai tujuan, termasuk sebagai 
+gudang data, e-commerce, dan aplikasi pencatatan.
+
+MySQL atau dibaca My Sequel merupakan sebuah Database Management System atau sering disingkat DBMS yang dijalankan menggunakan perintah SQL (Structured Query Language)
+ yang populer digunakan untuk pembuatan aplikasi berbasis website.
+
+database adalah sekumpulan data yang dikelola berdasarkan ketentuan tertentu yang saling berkaitan sehingga memudahkan dalam pengelolaannya. Dihimpun dari berbagai sumber
+, secara sederhana, database atau basis data merupakan sekumpulan data atau informasi yang tersimpan secara sistematis.
+
+fungsi database adalah sebagai berikut :
+- Mengelompokkan data untuk mempermudah identifikasi data, database menyiapkan data yang sesuai dengan permintaan user
+ terhadap suatu informasi dengan dengan cepat dan akurat.
