--- a/Agustus 2022/php dasar/sesi 9.html
+++ b/Agustus 2022/php dasar/sesi 9.html
@@ -1,1 +1,17 @@
 <h1><p>Get & Post</p></h1>
+
+-POST atau GET merupakan method yang digunakan untuk mengirim data ke suatu server untuk diolah.
+  Method POST dan GET digunakan pada form di halaman website.
+
+-Pada hakikatnya, kedua method ini yaitu POST dan GET memiliki fungsi yang sama yaitu untuk
+  mengirimkan nilai (value) variabel ke file lain yang telah diatur oleh sang programmer.
+
+-Form pada PHP mempunyai dua method pengiriman data, yaitu GET dan POST.
+  Dengan menggunakan method GET, maka nilai variabel yang dikirimkan ke server melalui url pada address bar browser.
+   Sedangkan method POST akan mengirimkan nilai variabel ke server secara terpisah, 
+    sehingga nilai variabelnya tidak terlihat.
+
+-Method POST dan GET digunakan pada form di halaman website. Untuk proses pengiriman data melalui url akan terlihat
+  perbedaan seperti ini. Dimana pada method POST tidak menampilkan nilai/data yang dikirim pada URL sedangkan method GET 
+   menampilkan nilai/data yang dikirimkan melalui url
+
