--- a/Agustus 2022/php dasar/sesi 10.html
+++ b/Agustus 2022/php dasar/sesi 10.html
@@ -15,3 +15,9 @@ database adalah sekumpulan data yang dikelola berdasarkan ketentuan tertentu yan
 fungsi database adalah sebagai berikut :
 - Mengelompokkan data untuk mempermudah identifikasi data, database menyiapkan data yang sesuai dengan permintaan user
  terhadap suatu informasi dengan dengan cepat dan akurat.
+
+
+ disini kita hanya membuthkan aplikasi exe.
+ aplikasi tersebut sudah ada di file xampp-mysql-bin
+
+ 
