--- a/Agustus 2022/php dasar/sesi 9.html
+++ b/Agustus 2022/php dasar/sesi 9.html
@@ -15,3 +15,19 @@
   perbedaan seperti ini. Dimana pada method POST tidak menampilkan nilai/data yang dikirim pada URL sedangkan method GET 
    menampilkan nilai/data yang dikirimkan melalui url
 
+   -yang harus dipelajari sebelum itu adalah SuperGlobals
+   SuperGlobals ini adalah variabel yang dimiliki oleh php.
+
+   -Kita harus paham dulu mengenai variabel scope/linkup dari sebuah variabel didalam php.
+  
+
+   Variabel Superglobals ini adalah variabel yang sudah dimiliki oleh php yang bisa kita akses kapanpun dan dimanapun di dalam halaman php kita.
+
+   Superglobals:
+  -$_GET
+  -$_POST
+  -$_REQUEST
+  -$_SESSION  
+  -$_COOKIE
+  -$_SERVER
+  -$_ENV
