--- a/Agustus 2022/php dasar/sesi 13/update.html
+++ b/Agustus 2022/php dasar/sesi 13/update.html
@@ -1,1 +1,7 @@
-<p> Update </p>
+<p>Update</p>
+
+<p>Secara singkat, arti update adalah memperbarui. Istilah tersebut biasanya dipakai saat seseorang
+     melakukan pembaharuan pada suatu hal</p>
+
+<p>Update adalah perintah yang digunakan untuk mendapatkan pembaharuan (update) terbaru dan melakukan
+ sinkronisasi dengan versi yang baru, atau dengan kata lain memperbarui data.</p>
