--- a/Agustus 2022/php dasar/sesi 14/searching.html
+++ b/Agustus 2022/php dasar/sesi 14/searching.html
@@ -1,2 +1,8 @@
 <p> Searching </p>
 
+<p>Searching adalah sebuah metode pencarian guna menemukan data / informasi yang sedang dicari di dalam sebuah kumpulan data yang memiliki type data sama.
+ Pencarian diperlukan untuk mendapatkan informasi/data dari kumpulan data yang belum diketahui.</p>
+
+ <p>Searching dalam pemrograman adalah proses yang sangat fundamental Guna mencari data tertentu dalam sekumpulan data tentunya yang memiliki tipe yang sama. 
+ Pencarian diperlukan untuk mencari informasi khusus dari tabel / kumpulan data pada saat lokasi yang pasti dari informasi tersebut sebelumnya tidak diketahui.
+</p>
