--- a/Agustus 2022/php dasar/sesi 15/upload.html
+++ b/Agustus 2022/php dasar/sesi 15/upload.html
@@ -1,1 +1,5 @@
-<p> Upload </p>
+<h1><p> Upload </p></h1>
+
+<p>Mengunggah (upload) berarti mengirim data atau berkas dari komputer Anda ke suatu tempat di Internet. 
+Istilah-istilah ini merupakan aktivitas yang telah Anda lakukan saat Anda mengakses internet. Jika Anda 
+pernah membuka suatu dokumen di salah satu panduan kami, maka Anda telah mengunduh berkas itu.</p>
