--- a/Agustus 2022/php dasar/sesi 16/Registrasi.html
+++ b/Agustus 2022/php dasar/sesi 16/Registrasi.html
@@ -1,1 +1,6 @@
-<p> Upload </p>
+<h1><p> Registrasi </p></h1>
+<br>
+<p>Registrasi memiliki arti, yakni pencatatan. Registrasi juga memiliki arti sebagai proses pendaftaran (dalam register).</p>
+<p>Kata lain dari registrasi yaitu pendaftaran</p>
+
+<p>kita harus mempelajari ini karena fitur ini merupakan bagian dari login system</p>
