--- a/Agustus 2022/php dasar/sesi 17/login.html
+++ b/Agustus 2022/php dasar/sesi 17/login.html
@@ -4,3 +4,6 @@
     Saat ini halaman login bisa dilakukan pada halaman website maupun aplikasi. Secara teknis pun saat 
     ini dalam melakukan login bisa dilakukan secara variatif mulai dari menggunakan email dan no hp, atau
      bisa juga menggunakan social media yang terintegrasi pada sistem tersebut.</p>
+
+<p>Login dimaksudkan untuk mengatur proses identifikasi. Proses Login minimal terdiri dari username/akun pengguna
+     dan password untuk mendapatkan hak akses.</p>
