--- a/Agustus 2022/web biodata/Mas All.html
+++ b/Agustus 2022/web biodata/Mas All.html
@@ -74,7 +74,7 @@
 			font-family: agency FB;
 			margin-top: 40px;
 			width: 80%;
-			box-shadow: 2px 4px 3px 1;frontal.jpg;
+			box-shadow: 2px 4px 3px 1;
 			height: 55%;
 			float: left;
 			margin-left: 130px;
@@ -143,7 +143,7 @@
 
 <body>
 	<div style="position:fixed;left:20px;bottom:20px;">
-		<a href="https://whatsapp.com/send?phone=+6282132123788&text=Welcome">
+		<a href="https://whatsapp.com/send?phone=+6282132123788=Welcome">
 			<button style="background:#32C03C;vertical-align:center;height:36px;border-radius:5px">
 				<img src="https://web.whatsapp.com/img/favicon/1x/favicon.png">Selamat datang</button></a>
 	</div>
