--- a/Agustus 2022/php dasar/sesi 25/web hosting&domain berbayar.html
+++ b/Agustus 2022/php dasar/sesi 25/web hosting&domain berbayar.html
@@ -15,3 +15,5 @@
 
 <p>Domain berbayar adalah layanan pembelian domain yang dibeli dari penyedia domain atau web hosting ke perusahaan, atau pribadi tertentu. Contohnya untuk Anda yang mencari 
 nama domain murah bisa cek di Qwords.com.</p>
+
+ini adalah hasil belajar php dasar saya: https://allwhiz.000webhostapp.com
