--- a/Agustus 2022/css bootstrap/index.html
+++ b/Agustus 2022/css bootstrap/index.html
@@ -16,10 +16,10 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning shadow-sm fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="image/aliabdul.jpg" alt="Logo" width="40" height="34">
+          <img src="image/oke.png" alt="Logo" width="40" height="34">
         </a>
         <a class="navbar-brand" href="#">Smk Pgri 2 Ponorogo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls=
@@ -42,14 +42,14 @@
       </div>
     </nav>
     <!-- akhir Navbar -->
-
+    
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="image/1.png" alt="alliabdull" width="370" class="rounded-circle" />
       <h1 class="display-4"><b>Sterida</b></h1>
       <p class="lead"><b><h3>Terbukti Lebih Maju</h3></b></p>
     <!-- akhir jumbotron -->
-
+    
     <!-- about -->
     <section id="about">
       <div class="container">
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h2>Projects</h2>
+            <h2>Siswa</h2>
           </div>
         </div>
         <div class="row">
@@ -84,7 +84,8 @@
             <div class="card">
               <img src="image/2.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Ayo semangat, Tunjukan Prestasimu!!!</p>
+                <p class="card-text"><b>Ayo semangat, Tunjukan Prestasimu!. Tidak ada yang tidak mungkin di dunia ini,apa yang kamu inginkan pasti bisa kamu dapatkan, asal sabar, usaha,dan ikhlas dalam doa</b></p>
+                <a href="#" class="btn btn-secondary">Selengkapnya</a>
               </div>
         </div>
       </div>
@@ -92,7 +93,8 @@
             <div class="card">
               <img src="image/mp1.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text">Masa depan adalah milik mereka yang menyiapkan hari ini</p>
+                <p class="card-text"><b>Masa depan adalah milik mereka yang menyiapkan hari ini. Man jadda wajada. Siapa yang bersungguh-sungguh, akan berhasil</b></p>
+                <a href="#" class="btn btn-secondary">Selengkapnya</a>
               </div>
         </div>
       </div>
@@ -100,7 +102,8 @@
             <div class="card">
               <img src="image/4.png" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text">Makin awal kamu memulai pekerjaan, makin awal pula kamu akan melihat hasilnya</p>
+                <p class="card-text"><b>Makin awal kamu memulai pekerjaan, makin awal pula kamu akan melihat hasilnya. "Sukses bukanlah final, kegagalan tak terlalu fatal. Keberanian untuk melanjutkannya, yang lebih penting</b></p>
+                <a href="#" class="btn btn-secondary">Selengkapnya</a>
               </div>
         </div>
       </div>
@@ -116,21 +119,21 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <form>
               <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
+                <label for="name" class="form-label"><b>Nama Lengkap</b></label>
                 <input type="text" class="form-control" id="name" aria-describedby="name">
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label"><b>Email</b></label>
                 <input type="email" class="form-control" id="email" aria-describedby="email">
               </div>
 
               <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
+                <label for="pesan" class="form-label"><b>Pesan</b></label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-success"><b>Kirim</b></button>
             </form>
           </div>
         </div>
@@ -139,23 +142,12 @@
     <!-- akhir contact -->
 
     <!-- footer -->
-    <div class="container-fluid bg-dark text-white">
-      <div class="row">
-        <div class="col-md-6">
-          <h4 class="text-uppercase fw-bold">About</h4>
-          <p>Mohon Maaf Ya Kalau Kurang Kreatif:)</p>
-        </div>
-        <div class="col-md-6 text-center">
-          <h4 class-="text-uppercase fw-bold">Links Acount</h4>
-          <a href="https://www.instagram.com/all.abdl_/"></a>
-          <a href="https://github.com/Alliabdull/"></a>
-        </div>
-      </div>
-    </div>
-    <footer class="bg-dark text-white text-center">
-      <p>Created with love by <a href="https://www.instagram.com/all.abdl_/" class="text-white fw-bold">alliabdull</a></p>
+    <footer class="bg-dark text-white text-center pb-5">
+      <p>Created with <i class="bi bi-instagram"></i> by <a href="https://www.instagram.com/all.abdl_/" class="text-white fw-bold">alliabdull</a></p>
     </footer>
+  </div>
     <!-- akhir footer -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5k
     fmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
