--- a/Agustus 2022/css bootstrap/index.html
+++ b/Agustus 2022/css bootstrap/index.html
@@ -26,18 +26,10 @@
         "navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Siswa</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Kelas</a>
-            </li>
-          </ul>
+          <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="Siswa.html">Siswa</a>           
+              <a class="nav-link" href="Kelas.html">Kelas</a>  
         </div>
       </div>
     </nav>
@@ -50,12 +42,11 @@
       <p class="lead"><b><h3>Terbukti Lebih Maju</h3></b></p>
     <!-- akhir jumbotron -->
     
-    <!-- about -->
-    <section id="about">
+    <!-- Home -->
+    <section id="Home">
       <div class="container">
         <div class="row text-center">
           <div class="col md-4">
-            <h2>About Motivation</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5">
@@ -69,14 +60,14 @@
         </div>
       </div>
     </section>
-    <!-- akhir about -->
+    <!-- akhir Home  -->
 
     <!-- projects -->
     <section id="projects">
       <div class="container">
         <div class="row text-center">
-          <div class="col">
-            <h2>Siswa</h2>
+          <div class="row">
+            <h2><b>About Motivation</b></h2>
           </div>
         </div>
         <div class="row">
@@ -85,7 +76,6 @@
               <img src="image/2.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text"><b>Ayo semangat, Tunjukan Prestasimu!. Tidak ada yang tidak mungkin di dunia ini,apa yang kamu inginkan pasti bisa kamu dapatkan, asal sabar, usaha,dan ikhlas dalam doa</b></p>
-                <a href="#" class="btn btn-secondary">Selengkapnya</a>
               </div>
         </div>
       </div>
@@ -93,8 +83,7 @@
             <div class="card">
               <img src="image/mp1.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text"><b>Masa depan adalah milik mereka yang menyiapkan hari ini. Man jadda wajada. Siapa yang bersungguh-sungguh, akan berhasil</b></p>
-                <a href="#" class="btn btn-secondary">Selengkapnya</a>
+                <p class="card-text"><b>Masa depan adalah milik mereka yang menyiapkan hari ini. Man jadda wajada. Siapa yang bersungguh-sungguh, akan berhasil</b></p>                
               </div>
         </div>
       </div>
@@ -103,43 +92,11 @@
               <img src="image/4.png" class="card-img-top" alt="Project 3" />
               <div class="card-body">
                 <p class="card-text"><b>Makin awal kamu memulai pekerjaan, makin awal pula kamu akan melihat hasilnya. "Sukses bukanlah final, kegagalan tak terlalu fatal. Keberanian untuk melanjutkannya, yang lebih penting</b></p>
-                <a href="#" class="btn btn-secondary">Selengkapnya</a>
               </div>
         </div>
       </div>
           </section>
     <!-- akhir projects -->
-
-    <!-- contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>Contact me</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-4">
-            <form>
-              <div class="mb-3">
-                <label for="name" class="form-label"><b>Nama Lengkap</b></label>
-                <input type="text" class="form-control" id="name" aria-describedby="name">
-              <div class="mb-3">
-                <label for="email" class="form-label"><b>Email</b></label>
-                <input type="email" class="form-control" id="email" aria-describedby="email">
-              </div>
-
-              <div class="mb-3">
-                <label for="pesan" class="form-label"><b>Pesan</b></label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-success"><b>Kirim</b></button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- akhir contact -->
 
     <!-- footer -->
     <footer class="bg-dark text-white text-center pb-5">
