--- a/Agustus 2022/css bootstrap/Kelas.html
+++ b/Agustus 2022/css bootstrap/Kelas.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Kelas</title>
-  </head>
-
-  <body>
-    <h1>Hello World</h1>
-  </body>
-</html>
+tyyy
