--- a/Agustus 2022/css bootstrap/index.html
+++ b/Agustus 2022/css bootstrap/index.html
@@ -15,6 +15,7 @@
     <title>My PortFolio | alliabdull</title>
   </head>
   <body id="home">
+    
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container-fluid">
@@ -100,7 +101,7 @@
 
     <!-- footer -->
     <footer class="bg-dark text-white text-center pb-5">
-      <p>Created with <i class="bi bi-instagram"></i> by <a href="https://www.instagram.com/all.abdl_/" class="text-danger fw-bold">alliabdull</a></p>
+      <p>Created with <i class="bi bi-instagram"></i> by <a href="https://www.instagram.com/all.abdl_/" class="text-white fw-bold">alliabdull</a></p>
     </footer>
   </div>
     <!-- akhir footer -->
